--- a/index.html
+++ b/index.html
@@ -5,27 +5,93 @@
   <title>RunComp</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
-    body { font-family: Arial, sans-serif; text-align: center; background: #f5f5f5; }
-    header { background: #222; color: white; padding: 20px; }
-    .card { background: white; margin: 20px; padding: 20px; border-radius: 10px; }
-    button { padding: 10px 20px; font-size: 16px; }
+    body { 
+      font-family: Arial, sans-serif; 
+      text-align: center; 
+      background: #f5f5f5; 
+      margin: 0; 
+      padding: 0;
+    }
+    header { 
+      background: #222; 
+      color: white; 
+      padding: 20px; 
+    }
+    .card { 
+      background: white; 
+      margin: 20px auto; 
+      padding: 20px; 
+      border-radius: 10px; 
+      max-width: 400px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+    }
+    button { 
+      padding: 10px 20px; 
+      font-size: 16px; 
+      cursor: pointer;
+      border: none;
+      border-radius: 5px;
+      background: #222;
+      color: white;
+      transition: background 0.3s;
+    }
+    button:hover {
+      background: #444;
+    }
+    ul { 
+      list-style-type: none; 
+      padding: 0; 
+    }
+    li { 
+      margin: 10px 0; 
+      padding: 10px; 
+      background: #f0f0f0; 
+      border-radius: 5px; 
+    }
   </style>
 </head>
 <body>
   <header>
-    <h1>🏃 RunComp</h1>
-    <p>Running competitions made simple</p>
+    <h1>🏆 RunComp</h1>
+    <p>Competitions made simple</p>
   </header>
 
   <div class="card">
-    <h2>Upcoming Races</h2>
-    <p>5K City Run – Register now</p>
-    <button>Enter Race</button>
+    <h2>Upcoming Competitions</h2>
+    <ul id="competitionList">
+      <!-- Competitions will appear here -->
+    </ul>
+    <button onclick="joinCompetition()">Join Competition</button>
   </div>
 
   <div class="card">
     <h2>Create a Competition</h2>
-    <button>Host Event</button>
+    <button onclick="hostCompetition()">Host Competition</button>
   </div>
+
+  <script>
+    // Placeholder competitions
+    const competitions = [
+      "5K City Run",
+      "Chess Tournament",
+      "Coding Challenge",
+      "Cooking Contest"
+    ];
+
+    const list = document.getElementById("competitionList");
+    competitions.forEach(comp => {
+      const li = document.createElement("li");
+      li.textContent = comp;
+      list.appendChild(li);
+    });
+
+    function joinCompetition() {
+      alert("Feature coming soon: Join a competition!");
+    }
+
+    function hostCompetition() {
+      alert("Feature coming soon: Host your own competition!");
+    }
+  </script>
 </body>
 </html>
