--- a/index.html
+++ b/index.html
@@ -5,6 +5,23 @@
   <title>RunComp</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
+// Import the functions you need from the SDKs you need
+import { initializeApp } from "firebase/app";
+// TODO: Add SDKs for Firebase products that you want to use
+// https://firebase.google.com/docs/web/setup#available-libraries
+
+// Your web app's Firebase configuration
+const firebaseConfig = {
+  apiKey: "AIzaSyCphAYrxzzdswHmAaKYIMOXUxhrd0AvDis",
+  authDomain: "runcomp-f77d5.firebaseapp.com",
+  projectId: "runcomp-f77d5",
+  storageBucket: "runcomp-f77d5.firebasestorage.app",
+  messagingSenderId: "910676631229",
+  appId: "1:910676631229:web:0f46c276f01178cda761d4"
+};
+
+// Initialize Firebase
+const app = initializeApp(firebaseConfig);
     body { 
       font-family: Arial, sans-serif; 
       text-align: center; 
