--- a/index.html
+++ b/index.html
@@ -89,10 +89,10 @@ const app = initializeApp(firebaseConfig);
   <script>
     // Placeholder competitions
     const competitions = [
-      "5K City Run",
-      "Chess Tournament",
-      "Coding Challenge",
-      "Cooking Contest"
+      "£500 Cash Draw ",
+      "£300 Cash Draw Tournament",
+      "City Break For 2",
+      "Galgorm Spa Package"
     ];
 
     const list = document.getElementById("competitionList");
