--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ const app = initializeApp(firebaseConfig);
 </head>
 <body>
   <header>
-    <h1>🏆 RunComp</h1>
+    <h1>💷 RunComp 💷</h1>
     <p>Competitions made simple</p>
   </header>
 
@@ -89,10 +89,11 @@ const app = initializeApp(firebaseConfig);
   <script>
     // Placeholder competitions
     const competitions = [
-      "£500 Cash Draw ",
-      "£300 Cash Draw Tournament",
+      "£500 Cash Draw Give Away ",
+      "£300 Cash Draw Give Away",
       "City Break For 2",
       "Galgorm Spa Package"
+      "Instant Wins COMING SOON",
     ];
 
     const list = document.getElementById("competitionList");
