--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ const app = initializeApp(firebaseConfig);
 
   <div class="card">
     <h2>Upcoming Competitions</h2>
-    <ul id="competitionList">
+    <ul id="competitionList"></ul>
       <!-- Competitions will appear here -->
     </ul>
     <button onclick="joinCompetition()">Join Competition</button>
