--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@ const app = initializeApp(firebaseConfig);
     <ul id="competitionList"></ul>
       <!-- Competitions will appear here -->
     </ul>
+<ul id="competitionList"></ul>
     <button onclick="joinCompetition()">Join Competition</button>
   </div>
 
