--- a/index.html
+++ b/index.html
@@ -1,271 +1,41 @@
-index.html
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>RunComp Ultimate</title>
-<link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <title>RunComp Ultimate</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 <header>
   <h1>💷 RunComp Ultimate</h1>
-  <p>Competitions with automated ticket system & winners!</p>
+  <p>Competitions with automated tickets & winners</p>
 </header>
 
-<section id="user-section">
-  <label for="username">Your Name</label>
-  <input type="text" id="username" placeholder="Enter your name">
-  <button onclick="confirmName()">Confirm Name</button>
+<section class="user">
+  <input id="username" placeholder="Enter your name">
+  <button onclick="setName()">Confirm Name</button>
 </section>
 
-<section id="competitions-section">
-  <h2>Live Competitions</h2>
-  <div id="competitions-list"></div>
-</section>
+<h2>Live Competitions</h2>
+<div id="competitions"></div>
 
-<section id="admin-panel">
-  <h2>Admin Panel</h2>
-  <input type="text" id="comp-name" placeholder="Competition name">
-  <input type="number" id="comp-price" placeholder="Ticket price (£)">
-  <input type="text" id="comp-image" placeholder="Image filename">
-  <select id="comp-category">
-    <option value="Cash">Cash</option>
-    <option value="Travel">Travel</option>
-    <option value="Other">Other</option>
-  </select>
-  <button onclick="addCompetition()">Add Competition</button>
-</section>
+<hr>
 
-<section id="winners-section">
-  <h2>Winners</h2>
-  <ul id="winners-list"></ul>
-</section>
+<h2>Admin Panel</h2>
+<input id="adminPass" type="password" placeholder="Admin password">
+<button onclick="adminLogin()">Login</button>
 
-<footer>
-  <p>&copy; 2026 RunComp Ultimate</p>
-</footer>
+<div id="admin" style="display:none">
+  <input id="name" placeholder="Competition name">
+  <input id="price" placeholder="Ticket price (£)">
+  <input id="image" placeholder="Image filename">
+  <button onclick="addComp()">Add Competition</button>
+</div>
+
+<h2>Winners</h2>
+<ul id="winners"></ul>
 
 <script src="script.js"></script>
 </body>
 </html>
-style.css
-body {
-  font-family: Arial, sans-serif;
-  margin: 0;
-  padding: 0;
-  background: #f4f4f4;
-  color: #333;
-}
-
-header {
-  background: #333;
-  color: #fff;
-  text-align: center;
-  padding: 1em 0;
-}
-
-header h1 {
-  margin: 0.2em 0;
-}
-
-section {
-  margin: 20px;
-  padding: 15px;
-  background: #fff;
-  border-radius: 10px;
-}
-
-input, select, button {
-  padding: 0.7em;
-  margin: 0.3em 0;
-  border-radius: 5px;
-  border: 1px solid #ccc;
-  width: 100%;
-  box-sizing: border-box;
-}
-
-button {
-  background: #ff6b6b;
-  color: #fff;
-  border: none;
-  cursor: pointer;
-  font-size: 16px;
-}
-
-button:hover {
-  background: #ff4b4b;
-}
-
-#competitions-list {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  gap: 1em;
-}
-
-.competition {
-  border: 1px solid #ccc;
-  border-radius: 10px;
-  padding: 1em;
-  width: 220px;
-  text-align: center;
-  background: #fff;
-}
-
-.competition img {
-  max-width: 100%;
-  border-radius: 5px;
-}
-
-#winners-section ul {
-  list-style-type: none;
-  padding: 0;
-}
-
-footer {
-  text-align: center;
-  margin: 20px 0;
-  font-size: 0.9em;
-}
-script.js
-let competitions = [];
-let winners = [];
-let username = "";
-
-// Load data from localStorage
-function loadData() {
-  const savedCompetitions = localStorage.getItem("competitions");
-  const savedWinners = localStorage.getItem("winners");
-
-  if(savedCompetitions) competitions = JSON.parse(savedCompetitions);
-  if(savedWinners) winners = JSON.parse(savedWinners);
-
-  displayCompetitions();
-  showWinners();
-}
-
-// Save data to localStorage
-function saveData() {
-  localStorage.setItem("competitions", JSON.stringify(competitions));
-  localStorage.setItem("winners", JSON.stringify(winners));
-}
-
-// Confirm user name
-function confirmName() {
-  const input = document.getElementById('username');
-  username = input.value.trim();
-  if(username) {
-    alert(`Welcome, ${username}!`);
-    input.value = '';
-  } else {
-    alert("Please enter your name.");
-  }
-}
-
-// Add competition
-function addCompetition() {
-  const name = document.getElementById('comp-name').value.trim();
-  const price = parseFloat(document.getElementById('comp-price').value);
-  const image = document.getElementById('comp-image').value.trim();
-  const category = document.getElementById('comp-category').value;
-
-  if(!name || !price || !image) {
-    alert("Fill all competition fields!");
-    return;
-  }
-
-  const comp = { 
-    name, 
-    price, 
-    image, 
-    category, 
-    tickets: [], 
-    totalMoney: 0 
-  };
-  competitions.push(comp);
-  saveData();
-  displayCompetitions();
-  alert("Competition added!");
-}
-
-// Display competitions
-function displayCompetitions() {
-  const list = document.getElementById('competitions-list');
-  list.innerHTML = "";
-  competitions.forEach((comp, index) => {
-    const div = document.createElement('div');
-    div.className = 'competition';
-    div.innerHTML = `
-      <h3>${comp.name}</h3>
-      <img src="${comp.image}" alt="${comp.name}">
-      <p>Ticket: £${comp.price}</p>
-      <p>Category: ${comp.category}</p>
-      <p>Collected: £${comp.totalMoney.toFixed(2)}</p>
-      <button onclick="buyTicket(${index})">Buy Ticket</button>
-    `;
-    list.appendChild(div);
-  });
-}
-
-// Buy ticket
-function buyTicket(index) {
-  if(!username) { alert("Enter your name first!"); return; }
-
-  const comp = competitions[index];
-  comp.tickets.push(username);
-  comp.totalMoney += comp.price;
-
-  // Auto winner if totalMoney >= 500
-  if(comp.totalMoney >= 500) {
-    pickWinnerForCompetition(index);
-  }
-
-  saveData();
-  displayCompetitions();
-}
-
-// Pick winner
-function pickWinnerForCompetition(index) {
-  const comp = competitions[index];
-  if(comp.tickets.length === 0) return;
-
-  const winnerIndex = Math.floor(Math.random() * comp.tickets.length);
-  const winnerName = comp.tickets[winnerIndex];
-
-  winners.push({competition: comp.name, winner: winnerName});
-  alert(`${winnerName} just won ${comp.name}!`);
-
-  showWinners();
-
-  // Reset competition
-  comp.tickets = [];
-  comp.totalMoney = 0;
-
-  saveData();
-  displayCompetitions();
-}
-
-// Show winners
-function showWinners() {
-  const list = document.getElementById('winners-list');
-  list.innerHTML = "";
-  winners.forEach(w => {
-    const li = document.createElement('li');
-    li.textContent = `${w.winner} won ${w.competition}`;
-    list.appendChild(li);
-  });
-}
-
-// Preload example competitions if none saved
-if(!localStorage.getItem("competitions")) {
-  competitions.push(
-    {name: "£500 Cash", price: 1, image: "500cash.png", category:"Cash", tickets: [], totalMoney: 0},
-    {name: "£300 Cash", price: 0.5, image: "300cash.png", category:"Cash", tickets: [], totalMoney: 0},
-    {name: "City Break", price: 3, image: "citybreak.png", category:"Travel", tickets: [], totalMoney: 0}
-  );
-  saveData();
-}
-
-loadData();
