--- a/index.html
+++ b/index.html
@@ -135,6 +135,10 @@ Mystery Prize"></textarea>
         </div>
 
         <div class="admin__box">
+<section id="winnersSection" class="admin-only">
+  <h2>Winners</h2>
+  <ul id="winners-list"></ul>
+</section>
           <h3>Winners</h3>
           <div class="row row--tight">
             <button id="exportWinnersBtn" class="btn btn--ghost">Export winners (CSV)</button>
